--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="%VITE_WEB_DESCRIPTION%" />
+    <meta name="keywords" content="%VITE_WEB_KEYWORDS%" />
     <title>%VITE_WEB_NAME% | %VITE_WEB_DESCRIPTION%</title>
     <script>
       if (localStorage.theme === 'dark' || !('theme' in localStorage)) {
